[ADD] 정적 파일 추가 및 webpack에 적용
- 번들링 된 파일에서 정적 파일들을 불러오지 못하는 문제가 있었는데, 'app.use(express.static("src/public"));'와 같이 고정된 경로에서 파일을 불러오던 것이 원인이었음. => 'app.use(express.static(path.join(__dirname, "/public")));'로 동적으로 경로를 탐색하여 정적 파일을 설정하게 함으로써 해결

[+]
- 'public/css/index.css' 파일 추가
- 'public/js/index.js' 파일 추가

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/bundle.js",
+    "start": "babel-node dist/bundle.js",
     "build": "webpack",
     "dev": "nodemon --watch 'src/**/*' --exec 'webpack && babel-node dist/bundle.js'"
   },
