--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "pug": "^3.0.3"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "copy-webpack-plugin": "^12.0.2",
