[FIX] nodemon 파일 내용 변경 시 변경사항 반영되지 않는 문제 해결
- nodemon의 --watch 옵션 대신 webpack의 --watch 옵션 사용

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node dist/bundle.js",
     "build": "webpack",
-    "dev": "nodemon --watch 'src/**/*' --exec 'webpack && babel-node dist/bundle.js'"
+    "dev": "webpack --watch & nodemon --exec babel-node dist/bundle.js"
   },
   "author": "",
   "license": "ISC",
