--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "compression": "^1.7.4",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,6 +25,7 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
+    "@types/socket.io": "^3.0.2",
     "copy-webpack-plugin": "^12.0.2",
     "nodemon": "^3.1.4",
     "ts-loader": "^9.5.1",
