--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "pug": "^3.0.3",
+    "shortid": "^2.2.16",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
+    "@types/shortid": "^0.0.32",
     "@types/socket.io": "^3.0.2",
     "copy-webpack-plugin": "^12.0.2",
     "nodemon": "^3.1.4",
