--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^22.5.0",
     "@types/shortid": "^0.0.32",
     "@types/socket.io": "^3.0.2",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "nodemon": "^3.1.4",
     "ts-loader": "^9.5.1",
